--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <h1> Hello i'm trying git & github.</h1>
+    <h1> Hello i'm trying git & github with my main branch.</h1>
     <script src = "app.js">
         
     </script>
